<resources>
    <string name="app_name" translatable="false">Muzik Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="info_empty_track_list">Nenhuma música pra tocar&#8230;</string>
    <string name="info_getting_track_list">Procurando músicas&#8230;</string>
    <string name="info_update_track_list">Procura por novos arquivos de música nas pastas do sistema.</string>

    <string name="btn_next_track">Próximo</string>
    <string name="btn_pause">Pausar</string>
    <string name="btn_play">Reproduzir</string>
    <string name="btn_previous_track">Anterior</string>
    <string name="btn_shuffle">Aleatório</string>
    <string name="btn_update_track_list">Atualizar minha biblioteca</string>

    <string name="txt_shuffle_info_plural">%1$d músicas &#8226; %2$s</string>
    <string name="txt_shuffle_info_singular">1 música &#8226; %s</string>

    <string name="dialog_permission_storage_title">Permissão de armazenamento</string>
    <string name="dialog_permission_storage_message">Para que possamos começar as coisas por aqui,
        precisamos que você nos dê permissão de leitura e gravação no armazenamento.</string>
    <string name="dialog_permission_storage_btn_ok">Vamos lá!</string>

    <string name="action_queue">Lista de reprodução</string>
    <string name="action_search">Pesquisar</string>

    <string name="cd_album_art">Capa do álbum</string>
    <string name="cd_btn_next_track">Próxima faixa</string>
    <string name="cd_btn_previous_track">Faixa anterior</string>
    <string name="cd_btn_repeat">Repetir</string>
    <string name="cd_btn_reorder">Reordenar</string>
    <string name="cd_btn_shuffle">Aleatório</string>
    <string name="cd_btn_state_control">Play ou pause</string>
    <string name="cd_empty_track_list">Nenhuma música encontrada</string>

    <string name="title_queue">Lista de reprodução</string>
    <string name="title_settings">Configurações</string>
</resources>
