<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_primary"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    >
    <ImageView
        android:id="@+id/img_album_art"
        android:contentDescription="@string/cd_album_art"
        android:layout_width="@dimen/album_art_large"
        android:layout_height="@dimen/album_art_large"
        android:layout_gravity="center"
        android:src="@drawable/ic_placeholder_album_large"
        />
    <TextView
        android:id="@+id/txt_title"
        android:text="All I Can Think About Is You"
        android:textSize="20sp"
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:layout_marginTop="24dp"
        />
    <TextView
        android:id="@+id/txt_artist"
        android:text="Coldplay"
        android:textSize="16sp"
        android:textColor="@color/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:layout_marginTop="8dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        >
        <TextView
            android:id="@+id/txt_current_duration"
            android:text="2:10"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/seek_track_indicator"
            android:layout_alignStart="@+id/seek_track_indicator"
            />

        <TextView
            android:id="@+id/txt_total_duration"
            android:text="4:31"
            android:textColor="@color/text_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/seek_track_indicator"
            android:layout_alignRight="@+id/seek_track_indicator"
            />

        <SeekBar
            android:id="@+id/seek_track_indicator"
            android:progressTint="@color/colorPrimary"
            android:thumbTint="@color/colorPrimary"
            android:progressBackgroundTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="54"
            android:max="100"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/txt_current_duration"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_below="@id/seek_track_indicator"
            android:layout_alignParentBottom="true"
            android:weightSum="5"
            >
            <ImageButton
                android:id="@+id/btn_suffle"
                android:contentDescription="@string/cd_btn_shuffle"
                android:layout_weight="1"
                android:src="@drawable/ic_shuffle_normal"
                style="@style/ImageButtonControlPlayerBottom"
                />
            <ImageButton
                android:id="@+id/btn_previous"
                android:contentDescription="@string/cd_btn_previous_track"
                android:layout_weight="1"
                android:src="@drawable/ic_skip_previous"
                style="@style/ImageButtonControlPlayerBottom"
                />
            <ImageButton
                android:id="@+id/btn_state_control"
                android:contentDescription="@string/cd_btn_state_control"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:src="@drawable/ic_pause_circle"
                style="@style/ImageButtonControlPlayerBottom"
                />
            <ImageButton
                android:id="@+id/btn_next"
                android:contentDescription="@string/cd_btn_next_track"
                android:layout_weight="1"
                android:src="@drawable/ic_skip_next"
                style="@style/ImageButtonControlPlayerBottom"
                />
            <ImageButton
                android:id="@+id/btn_repeat"
                android:contentDescription="@string/cd_btn_repeat"
                android:layout_weight="1"
                android:src="@drawable/ic_repeat"
                style="@style/ImageButtonControlPlayerBottom"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>