<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_bottom_control"
    android:background="@color/player_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:visibility="gone"
    tools:showIn="@layout/app_bar_main"
    >
    <ImageView
        android:id="@+id/img_album_art"
        android:contentDescription="@string/cd_album_art"
        android:layout_width="@dimen/album_art_medium"
        android:layout_height="@dimen/album_art_medium"
        android:src="@drawable/ic_placeholder_album_small"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        >
        <TextView
            android:id="@+id/txt_current_media_title"
            android:textColor="@color/text_player_bottom_primary"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_current_media_artist"
            android:textColor="@color/text_player_bottom_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_player_bottom_state_control"
        android:contentDescription="@string/cd_btn_state_control"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_pause"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <ImageButton
        android:id="@+id/btn_player_bottom_next"
        android:contentDescription="@string/cd_btn_next_track"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_skip_next"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
</LinearLayout>