<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mini_player"
    android:background="@color/mini_player"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp"
    android:visibility="gone"
    >
    <ImageView
        android:id="@+id/img_album_art"
        android:contentDescription="@string/cd_album_art"
        android:layout_width="@dimen/album_art_medium"
        android:layout_height="@dimen/album_art_medium"
        android:src="@drawable/ic_placeholder_album_small"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        >
        <TextView
            android:id="@+id/txt_current_track_title"
            android:textColor="@color/text_primary_opaque"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            />
        <TextView
            android:id="@+id/txt_current_track_artist"
            android:textColor="@color/text_primary_opaque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_previous"
        android:contentDescription="@string/cd_btn_previous_track"
        android:src="@drawable/ic_skip_previous"
        style="@style/ImageButtonControlPlayerBottom"
        />
    <ImageButton
        android:id="@+id/btn_play_pause"
        android:contentDescription="@string/cd_btn_play_pause"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_pause"
        style="@style/ImageButtonControlPlayerBottom"
        />
    <ImageButton
        android:id="@+id/btn_next"
        android:contentDescription="@string/cd_btn_next_track"
        android:src="@drawable/ic_skip_next"
        style="@style/ImageButtonControlPlayerBottom"
        />
</LinearLayout>