<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background_secondary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/img_album_art"
        android:contentDescription="@string/cd_album_art"
        android:background="@color/background_primary"
        android:layout_width="70dp"
        android:layout_height="70dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:layout_toStartOf="@+id/btn_previous"
        android:layout_toLeftOf="@+id/btn_previous"
        android:layout_toEndOf="@id/img_album_art"
        android:layout_toRightOf="@id/img_album_art"
        >
        <TextView
            android:id="@+id/txt_title"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/txt_artist"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <ImageButton
        android:id="@+id/btn_previous"
        android:contentDescription="@string/cd_btn_previous_track"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/btn_play_pause"
        android:layout_toLeftOf="@+id/btn_play_pause"
        android:layout_centerVertical="true"
        android:padding="0dp"
        android:src="@drawable/ic_skip_previous"
        android:scaleType="fitCenter"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <ImageButton
        android:id="@+id/btn_play_pause"
        android:contentDescription="@string/cd_btn_play_pause"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/btn_next"
        android:layout_toLeftOf="@+id/btn_next"
        android:layout_centerVertical="true"
        android:padding="0dp"
        android:src="@drawable/ic_pause"
        android:scaleType="fitCenter"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
    <ImageButton
        android:id="@+id/btn_next"
        android:contentDescription="@string/cd_btn_next_track"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="0dp"
        android:src="@drawable/ic_skip_next"
        android:scaleType="fitCenter"
        android:clickable="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
</RelativeLayout>